env/code_53e8aec8285a7/stderr.txt
  File "main.py", line 2
    Print"hello"
               ^
SyntaxError: invalid syntax
